--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -154,11 +154,25 @@ text_sensor:
     id: leaf_battery_level
     on_value:
       then:
-        - lvgl.label.update:
-            id: ev_battery_level
-            text:
-              format: "%s%%"
-              args: ['id(leaf_battery_level).state.c_str()']
+        - lambda: |-
+            int level = atoi(id(leaf_battery_level).state.c_str());
+
+            char buf[8];
+            snprintf(buf, sizeof(buf), "%d%%", level);
+
+            lvgl::Label *label = id(ev_battery_level);
+
+            // Update text
+            label->set_text(buf);
+
+            // Update color based on level
+            if (level >= 60) {
+              label->set_text_color(id(battery_green));
+            } else if (level >= 30) {
+              label->set_text_color(id(battery_amber));
+            } else {
+              label->set_text_color(id(battery_red));
+            }
 
   - platform: homeassistant
     entity_id: sensor.leaf_range_ac_off
@@ -250,7 +264,7 @@ lvgl:
                         id: ev_battery_level
                         text: "--%"
                         align: center
-                        x: 15       # tweak this
+                        x: 12       # tweak this
                         y: -3       # tweak this
                         text_font: font_body_32
                         text_color: color_primary_text
