--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -3,6 +3,7 @@
 substitutions:
   icon_font: mdi_icons_40
   text_font: font_body_20
+  display_mode: light   # or light
   text_color: color_primary_text
   bg_color: color_background
   button_on_color: color_accent
@@ -53,8 +54,7 @@ time:
 packages:
   # Generic configuration for ESP32 screens
   # All the colors
-  #colors: !include esphome-lvgl-panel/common/palette_dark.yaml
-  colors: !include esphome-lvgl-panel/common/palette_light.yaml
+  colors: !include esphome-lvgl-panel/common/palette_${display_mode}.yaml
   # Fonts you need
   fonts: !include esphome-lvgl-panel/common/fonts.yaml
   # 1000s of glyphs
@@ -192,7 +192,7 @@ text_sensor:
 image:
   rgb565:
     alpha_channel:
-      - file: esphome-lvgl-panel/assets/images/car_outline_dark.svg
+      - file: esphome-lvgl-panel/assets/images/car_outline_${display_mode}.svg
         id: car_outline_dark_200
         resize: 200x200
 
