added rain icons

--- a/weather_homeassistant/weather_forecast_action.yaml
+++ b/weather_homeassistant/weather_forecast_action.yaml
@@ -647,11 +647,11 @@ image:
         id: partlycloudy_${size}
         resize: ${size}x${size}
 
-      - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/rain.svg
+      - file: esphome-lvgl-panel/modules/weather/assets/images/wi-rain.svg
         id: pouring_${size}
         resize: ${size}x${size}
 
-      - file: esphome-modular-lvgl-buttons/weather_homeassistant/assets/images/chancerain.svg
+      - file: esphome-lvgl-panel/modules/weather/assets/images/wi-showers.svg.svg
         id: rainy_${size}
         resize: ${size}x${size}
 
