--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -157,7 +157,7 @@ script:
           if (charging) {
             // UTF-8 lightning. If your font doesn't include it, it'll show as tofu.
             // Alternative: use "⚡ " or just "CHG " prefix.
-            snprintf(buf, sizeof(buf), "⚡ %d%%", level);
+            snprintf(buf, sizeof(buf), "%s%d%%", "${mdi_home_lightning_bolt}", level);
           } else {
             snprintf(buf, sizeof(buf), "%d%%", level);
           }
@@ -187,7 +187,7 @@ text_sensor:
     on_value:
       then:
         - script.execute: render_ev_battery
-        
+
   - platform: homeassistant
     entity_id: sensor.leaf_range_ac_off
     id: leaf_range
