--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -157,7 +157,8 @@ script:
           if (charging) {
             // UTF-8 lightning. If your font doesn't include it, it'll show as tofu.
             // Alternative: use "⚡ " or just "CHG " prefix.
-            snprintf(buf, sizeof(buf), "%s%d%%", "${mdi_home_lightning_bolt}", level);
+            snprintf(buf, sizeof(buf), "⚡%d%%", level);
+            snprintf(buf, sizeof(buf), "${mdi_home_lightning_bolt}%d%%", level);
           } else {
             snprintf(buf, sizeof(buf), "%d%%", level);
           }
