--- a/common/fonts.yaml
+++ b/common/fonts.yaml
@@ -26,6 +26,13 @@ font:
     size: 32
     bpp: 8
 
+  - file: "esphome-lvgl-panel/assets/fonts/materialdesignicons-webfont.ttf"
+    id: font_mdi_32
+    size: 32
+    glyphs:
+      - ${mdi_home_lightning_bolt}
+      - ${mdi_home_lightning_bolt_outline}
+
   - file: "esphome-lvgl-panel/assets/fonts/Inter-SemiBold.ttf"
     id: font_body_24
     size: 24
