--- a/common/fonts.yaml
+++ b/common/fonts.yaml
@@ -30,8 +30,8 @@ font:
     id: font_mdi_32
     size: 32
     glyphs:
-      - ${mdi_home_lightning_bolt}
-      - ${mdi_home_lightning_bolt_outline}
+      - ${mdi_lightning_bolt}
+      - ${mdi_lightning_bolt_outline}
 
   - file: "esphome-lvgl-panel/assets/fonts/Inter-SemiBold.ttf"
     id: font_body_24
