--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -150,7 +150,7 @@ script:
           // Build label text (lightning when charging)
           char buf[16];
           if (charging) {
-            snprintf(buf, sizeof(buf), "%s%d%%", "${mdi_home_lightning_bolt}", level);
+            snprintf(buf, sizeof(buf), "%s%d%%", "${mdi_lightning_bolt}", level);
           } else {
             snprintf(buf, sizeof(buf), "%d%%", level);
           }
@@ -275,15 +275,43 @@ lvgl:
                         src: car_outline_dark_200
                         align: center
 
-                    - label:
-                        id: ev_battery_level
-                        text: "--%"
+                    #- label:
+                    #    id: ev_battery_level
+                    #    text: "--%"
+                    #    align: center
+                    #    x: 12       # tweak this
+                    #    y: -3       # tweak this
+                    #    text_font: font_body_32
+                    #    text_color: color_primary_text
+                    #    text_align: center
+                    - obj:
+                        id: ev_battery_row
+                        width: SIZE_CONTENT
+                        height: SIZE_CONTENT
+                        bg_opa: TRANSP
                         align: center
-                        x: 12       # tweak this
-                        y: -3       # tweak this
-                        text_font: font_body_32
-                        text_color: color_primary_text
-                        text_align: center
+                        x: 12
+                        y: -3
+                        layout:
+                          type: flex
+                          flex_flow: ROW
+                          flex_align_main: center
+                          flex_align_cross: center
+                          pad_column: 3
+                        widgets:
+                          - label:
+                              id: ev_charge_icon
+                              text: "${mdi_lightning_bolt}"
+                              text_font: font_mdi_32
+                              text_color: 0x2196F3
+                              hidden: true
+
+      - label:
+          id: ev_battery_level
+          text: "--%"
+          text_font: font_body_32
+          text_color: color_primary_text
+          text_align: center
 
               # ---- Range below car ----
               - label:
