--- a/modules/ev/ev_status.yaml
+++ b/modules/ev/ev_status.yaml
@@ -85,6 +85,7 @@ image:
 lvgl:
   pages:
     - id: ${page_entity | default("main_page")}
+      layout: 12x12
       widgets:
         - container:
             id: ev_container
